# kejianli

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  STATUS.md  docker-compose.yml  justfile
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: a44c3eb848c8_initial_schema.py  a62d4f09c8e1_visibility_confidence_intervals.py  b71e20d4a6f3_project_geo_cycles.py  b982b5a85dc3_citation_evidence.py  c44d42d9a1f1_citation_prompt_text.py  c83f2a61e7d4_cycle_measurement_results.py  d51a12e9f033_prompt_sets.py  d94a7c30f8b2_optimization_artifacts.py  e05b8d42a9c1_backfill_optimization_artifacts.py  e712d0c49b2a_project_activity.py  f16c9e53b0d2_delivery_records.py  f34c18bd94d6_tracking_plans.py  g27d0f64c1e3_repair_unverified_work_status.py  h38e1a75d2f4_tracking_execution.py  i49f2b86e3a5_agent_control_plane.py  j50a3c97f4b6_agent_durable_execution.py  k61b4da8e5c7_provider_qualification_gate.py  l72c5eb9f6d8_mark_legacy_evidence_unclassified.py  m83d6fca07e9_measurement_prompt_quality.py  n94e70db18fa_competitor_visibility.py  o05f81ec29ab_prompt_set_lineage.py  p16a4e8b9c20_engine_runtime_status.py  q27b5f9c0d31_tracking_plan_execution_lease.py  (+9 more)
backend/docs/: citation-engine.md
backend/keeplix/: __init__.py  main.py
backend/tests/: conftest.py  test_api.py  test_baidu_search.py  test_brand_facts.py  test_citation.py  test_engagement.py  test_fetch.py  test_kimi_web_search.py  test_prompt_quality.py  test_qwen_web_search.py  test_scoring.py  test_site_profile.py
docs/: glossary.md  (+6 more)
(+74 files in other folders)
