[project]
name = "keeplix"
version = "0.1.0"
description = "keeplix (可见力) — Agentic GEO platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# 抓取增强：装了才用 Playwright（SSR）。没装时 analysis 自动降级 httpx。
browser = ["playwright>=1.48"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["keeplix"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI 的 Depends() 默认参数是官方惯例，B008 在此为误报
"keeplix/api/*.py" = ["B008"]
# 历史迁移保持生成时原貌，不为静态检查重写。
"alembic/env.py" = ["I001"]
"alembic/versions/*.py" = ["E501", "I001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = []
ignore_missing_imports = true

[[tool.mypy.overrides]]
# bs4 的 .find(attrs=...) 重载在类型存根里不全，产生误报；解析逻辑已被单测覆盖
module = "keeplix.engines.analysis"
disable_error_code = ["call-overload", "operator"]
